--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -2,7 +2,7 @@
 title: "Welcome to DACSS 601"
 description: |
   Welcome to DACSS 601: Foundations of Data Science. We hope you enjoy 
-  reading what we have to say!
+  our student projects.
 categories:
   - welcome
 author:
