--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -11,9 +11,7 @@ author:
     affiliation: DACSS
     affiliation_url: http://umass.edu/sbs/dacss
 date: 01-26-2022
-output:
-  distill::distill_article:
-    self_contained: false
+output: pdf 
 ---
 
 ```{r setup, include=FALSE}
@@ -24,5 +22,10 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```
 
+
+```{r}
+birds<-read_csv("../../_data/birds.csv")
+
+```
 
 
