--- a/_posts/2022-02-02-example-tabular-data/example-tabular-data.Rmd
+++ b/_posts/2022-02-02-example-tabular-data/example-tabular-data.Rmd
@@ -5,13 +5,14 @@ description: |
   the advanced data sets.
 author:
 - name: Meredith Rolfe
-date: "`r Sys.Date()`"
+date: '`r Sys.Date()`'
 categories:
 - example code
 - data cleaning
 output:
   distill::distill_article:
     self_contained: no
+draft: no
 ---
 
 
